--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -31,7 +31,7 @@ jobs:
           flavor: |
             latest=true
           tags: |
-            type=raw,value={{ github.event.inputs.version }}-debian
+            type=raw,value=${{ github.event.inputs.version }}-debian
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
