--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -33,6 +33,9 @@ jobs:
           tags: |
             type=raw,value=${{ github.event.inputs.version }}-debian
           
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
@@ -49,6 +52,8 @@ jobs:
           context: ./
           file: ./Dockerfile.debian
           build-args: VERSION=${{ github.event.inputs.version }}
+          platforms: linux/amd64,linux/arm/v8
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           
