--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     python3 \
     python3-setuptools \
+    python3-certifi \
     git && \
     \
     git clone -b ${VERSION} https://gitlab.freedesktop.org/gstreamer/cerbero.git
