--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     apt-utils \
     build-essential \
     python3 \
+    python3-venv \
     python3-setuptools \
     python3-certifi \
     git && \
