--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -8,7 +8,10 @@ on:
         description: 'GStreamer version'
         default: '1.22.8'
         required: true
-
+      platforms:
+        description: 'Docker image platforms'
+        default: 'linux/amd64,linux/arm64'
+        required: true
 
 jobs:
   build:
