--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -55,7 +55,7 @@ jobs:
           context: ./
           file: ./Dockerfile.debian
           build-args: VERSION=${{ github.event.inputs.version }}
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ github.event.inputs.platforms }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
